linkerd-scripts/05-apply-proxy-inject-sample-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-inject-enabled-ns
  annotations:
    linkerd.io/inject: enabled
